--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -165,7 +165,7 @@ LeadListScreen As screen:
                         txtinptsearchLS As text:
                             BorderColor: =Header.SHRed
                             Default: =""
-                            HintText: ="Search on Contract No./Mechanic Name"
+                            HintText: ="Search on Contract No./Mechanic Name/Lead Tracking No."
                             HoverBorderColor: =Header.SHRed
                             HoverFill: =RGBA(0, 0, 0, 0)
                             Width: =340
