--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -398,7 +398,7 @@ EstimateScreen As screen:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DataSource: =LeadInformations
                 FillPortions: =0
-                Height: =If(EstimatedHours.Height+Material.Height+UnitDown.Height+AdditionalExpensesRequired.Height+TravelRequired.Height+CommunicatedtoCustomer.Height+CustomerName.Height+CustomerContactES.Height+TotalEstimatedExpenseES.Height+TotalEstimatedHoursofTravelES.Height=0,800,EstimatedHours.Height+Material.Height+UnitDown.Height+AdditionalExpensesRequired.Height+TravelRequired.Height+CommunicatedtoCustomer.Height+CustomerName.Height+CustomerContactES.Height+TotalEstimatedExpenseES.Height+TotalEstimatedHoursofTravelES.Height+10)
+                Height: =If(EstimatedHours.Height+Material.Height+UnitDown.Height+AdditionalExpensesRequired.Height+TravelRequired.Height+CommunicatedtoCustomer.Height+CustomerName.Height+CustomerContactES.Height+TotalEstimatedExpenseES.Height+TotalEstimatedHoursofTravelES.Height=0,800,EstimatedHours.Height+Material.Height+UnitDown.Height+AdditionalExpensesRequired.Height+TravelRequired.Height+CommunicatedtoCustomer.Height+CustomerName.Height+CustomerContactES.Height+TotalEstimatedExpenseES.Height+TotalEstimatedHoursofTravelES.Height+20)
                 Item: =VarFormMode
                 LayoutMinHeight: =250
                 LayoutMinWidth: =Parent.Width
@@ -721,7 +721,7 @@ EstimateScreen As screen:
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_totalestimatedexpense")
                     Fill: =RGBA(255, 255, 255, 1)
-                    Height: =100
+                    Height: =If(VarTotalEstimatesExpense,100,70)
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_totalestimatedexpense")
                     Required: =false
                     Update: =IntxtTotalEstimatedExpense.Text
@@ -777,7 +777,7 @@ EstimateScreen As screen:
                         RadiusTopRight: =0
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Tooltip: ="Total estimated expense"
-                        Width: =Parent.Width - 120
+                        Width: =Parent.Width - 100
                         X: =60
                         Y: =lblTotalEstimatedExpense.Y + lblTotalEstimatedExpense.Height + 5
                         ZIndex: =3
@@ -939,7 +939,7 @@ EstimateScreen As screen:
                         RadiusTopRight: =0
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Tooltip: ="Total estimated hours of travel"
-                        Width: =Parent.Width - 120
+                        Width: =Parent.Width - 100
                         X: =60
                         Y: =lblTotalEstimatedHoursofTravel.Y + lblTotalEstimatedHoursofTravel.Height + 5
                         ZIndex: =3
@@ -1108,7 +1108,7 @@ EstimateScreen As screen:
                         RadiusTopRight: =0
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Tooltip: ="Customer Name"
-                        Width: =Parent.Width - 120
+                        Width: =Parent.Width - 100
                         X: =60
                         Y: =If(VarCustomerName,lblContactName.Y + lblContactName.Height + 5,15)
                         ZIndex: =3
@@ -1214,7 +1214,7 @@ EstimateScreen As screen:
                         Reset: =true
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Tooltip: ="Customer Phone Number"
-                        Width: =Parent.Width - 120
+                        Width: =Parent.Width - 100
                         X: =60
                         Y: =lblContactES.Y + lblContactES.Height + 5
                         ZIndex: =3
