--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -29,7 +29,7 @@ SubmittedLeadScreen As screen:
             LayoutMode: =LayoutMode.Auto
             PaddingRight: =0.00
             PaddingTop: =0.00
-            Width: =Parent.Width
+            Width: =Parent.Width-20
             X: =0.00
             ZIndex: =1
 
