--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -798,6 +798,7 @@ SubmittedLeadScreen As screen:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     ChevronBackground: =RGBA(255, 0, 0, 1)
                     ChevronHoverBackground: =Self.ChevronBackground
+                    DefaultSelectedItems: =["Created Date"]
                     DisplayFields: =["Value"]
                     FocusedBorderThickness: =2
                     Font: =Font.Arial
