--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -643,7 +643,7 @@ LeadListScreen As screen:
             OnSelect: |-
                 =Set(QQname,true);
                 UpdateIf(LeadInformations,ID=glryleadlistLS.Selected.ID,{LeadStatus:"InProgress",QQTeamName:VarLoggedInUser.FullName,StatusDate:Now()});
-                LeadInProgress.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,VarLoggedInUser.FullName);
+                //LeadInProgress.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,VarLoggedInUser.FullName);
                 Navigate(LeadScreen);
             PressedBorderColor: =RGBA(1, 43, 1, 0)
             PressedFill: =Self.Fill
