--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -285,6 +285,18 @@ DashboardScreen As screen:
                     Width: =Parent.Width/3.35
                     ZIndex: =1
 
+                    Circle1_2 As circle:
+                        BorderColor: =RGBA(255, 191, 0, 1)
+                        BorderThickness: =1
+                        DisplayMode: =DisplayMode.View
+                        Fill: =RGBA(255, 191, 0, 1)
+                        Height: =13
+                        Visible: =If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
+                        Width: =13
+                        X: =Parent.Width/1.2
+                        Y: =Parent.Height/8
+                        ZIndex: =5
+
                     grpOpenLeadsDS As group:
                         Height: =5
                         Width: =5
@@ -396,6 +408,18 @@ DashboardScreen As screen:
                     Width: =Parent.Width/3.35
                     ZIndex: =2
 
+                    Circle1_3 As circle:
+                        BorderColor: =RGBA(255, 191, 0, 1)
+                        BorderThickness: =1
+                        DisplayMode: =DisplayMode.View
+                        Fill: =RGBA(255, 191, 0, 1)
+                        Height: =13
+                        Visible: =If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
+                        Width: =13
+                        X: =Parent.Width/1.2
+                        Y: =Parent.Height/8
+                        ZIndex: =5
+
                     grpInprogressLeadsDS As group:
                         Height: =5
                         Width: =5
@@ -505,6 +529,18 @@ DashboardScreen As screen:
                     LayoutMinWidth: =250
                     Width: =Parent.Width/3.35
                     ZIndex: =3
+
+                    Circle1_4 As circle:
+                        BorderColor: =RGBA(255, 191, 0, 1)
+                        BorderThickness: =1
+                        DisplayMode: =DisplayMode.View
+                        Fill: =RGBA(255, 191, 0, 1)
+                        Height: =13
+                        Visible: =If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
+                        Width: =13
+                        X: =Parent.Width/1.2
+                        Y: =Parent.Height/8
+                        ZIndex: =8
 
                     grpInRejectedLeadsDS As group:
                         Height: =5
@@ -773,6 +809,18 @@ DashboardScreen As screen:
                     LayoutMinWidth: =250
                     Width: =Parent.Width/2.2
                     ZIndex: =2
+
+                    Circle1_5 As circle:
+                        BorderColor: =RGBA(255, 191, 0, 1)
+                        BorderThickness: =1
+                        DisplayMode: =DisplayMode.View
+                        Fill: =RGBA(255, 191, 0, 1)
+                        Height: =13
+                        Visible: =If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
+                        Width: =13
+                        X: =ctnQuatedLeadsDS.Width/1.2
+                        Y: =Parent.Height/8
+                        ZIndex: =5
 
                     grpSoldLeadsDS As group:
                         Height: =5
