--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -291,7 +291,9 @@ DashboardScreen As screen:
                         DisplayMode: =DisplayMode.View
                         Fill: =RGBA(255, 191, 0, 1)
                         Height: =13
-                        Visible: =If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
+                        Visible: |-
+                            =//If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
+                            false
                         Width: =13
                         X: =Parent.Width/1.2
                         Y: =Parent.Height/8
@@ -414,7 +416,9 @@ DashboardScreen As screen:
                         DisplayMode: =DisplayMode.View
                         Fill: =RGBA(255, 191, 0, 1)
                         Height: =13
-                        Visible: =If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
+                        Visible: |-
+                            =//If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
+                            false
                         Width: =13
                         X: =Parent.Width/1.2
                         Y: =Parent.Height/8
@@ -536,7 +540,9 @@ DashboardScreen As screen:
                         DisplayMode: =DisplayMode.View
                         Fill: =RGBA(255, 191, 0, 1)
                         Height: =13
-                        Visible: =If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
+                        Visible: |-
+                            =//If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
+                            false
                         Width: =13
                         X: =Parent.Width/1.2
                         Y: =Parent.Height/8
@@ -816,7 +822,7 @@ DashboardScreen As screen:
                         DisplayMode: =DisplayMode.View
                         Fill: =RGBA(255, 191, 0, 1)
                         Height: =13
-                        Visible: =If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
+                        Visible: =//If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes))>0,true,false)
                         Width: =13
                         X: =ctnQuatedLeadsDS.Width/1.2
                         Y: =Parent.Height/8
