--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -120,7 +120,7 @@ ChatScreen As screen:
             BorderThickness: =2
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
-            Height: =If(Parent.Height<Parent.Width,Parent.Height/8,Parent.Height/14)
+            Height: =//If(Parent.Height<Parent.Width,Parent.Height/8,Parent.Height/14)
             LayoutMinHeight: =100
             LayoutMinWidth: =250
             PaddingLeft: =10
